--- a/index.html
+++ b/index.html
@@ -6,36 +6,7 @@
 <meta charset="utf-8" />
 
 <title>Dungeon</title>
-<style>
-    * {padding: 0; margin: 0}
-    canvas {
-        background: #eee
-    }
-
-    .vertical-menu {
-        width: 200px;
-    }
-
-    .vertical-menu p {
-        display: block;
-        padding: 12px;
-        text-decoration: none;
-        background-color: #eee;
-    } 
-    .vertical-menu p.head {
-        background-color: #4CAF50;
-        color: white;
-    }
-    .vertical-menu p.enabled {
-        color: #000;
-    }
-    .vertical-menu p.enabled:hover {
-        background-color: #ddd;
-    }   
-    .vertical-menu p.disabled {
-        color: #ddd;
-    }
-</style>
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
